2004-09-23  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.

	* src/addressbook_window.cpp, src/addressbook_window.h, 
	src/calls_history_window.cpp, src/calls_history_window.h, 
	src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp, 
	src/main_window.cpp, src/urlhandler.cpp: Updated API for the calls
	history. Update the urls history for auto-completion when adding
	a call, clearing the history, adding a contact, modifying a contact
	information, deleting a contact and deleting an address book. Use
	GConf as a store backend, not as a config backend.

2004-09-22  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Do not display empty names.

2004-09-22  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Added automatic calling when an user is
	selected in the list of possible entries as requested by Josep. Added
	automatic calling on enter being pressed in the URL bar.

2004-09-22  Damien Sandras  <dsandras@gnome.org>

	* src/chat_window.cpp, src/endpoint.cpp, src/endpoint.h: Applied
	patch from Julien for API change. Do not use anymore
	gnomemeeting_pstring_cut, cut in the right function directly and trim
	the result. Fixed stay on top bug reported by Josep and Johnny.

	* src/main_window.cpp: Inversed logic. Only trigger the completion
	after 2 chars are typed.

	* src/misc.cpp: Trim the result of gnomemeeting_pstring_cut.

2004-09-22  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Lowered dep on GTK+ 2.4.0.

2004-09-21  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Put depend on GTK+ 2.4 as it has been released
	for some time now and is even available on Win32.

2004-09-21  Damien Sandras  <dsandras@gnome.org>

	* lib/widgets/Makefile.am, lib/widgets/history-combo.c, 
	lib/widgets/history-combo.h: Removed the now unused history combo.

	* src/addressbook_window.cpp: Added FIXME.

	* src/calls_history_window.cpp, src/calls_history_window.h: Added