@@ -1,5 +1,9 @@
 2004-09-23  Damien Sandras  <dsandras@gnome.org>
 
+	* src/main_window.cpp: Fixed menu tooltips.
+
+2004-09-23  Damien Sandras  <dsandras@gnome.org>
+
 	* NEWS: Updated with CVS news.
 
 	* src/addressbook_window.cpp, src/addressbook_window.h, 
